syntax = "proto3";

package com.example.gateway.domain;

import "com/example/gateway/domain/gateway_domain_objects.proto";
import "validate/validate.proto";

message SendLoginLinkRequest {
    string user_email = 1 [(validate.rules).string.email = true];
}

message DoNothingTwiceCommand {
    DoNothingTwice nothing_twice = 1;
}

message CompleteLoginRequest {
    string code = 1;
    string state = 2;
}
